--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover">
     <meta name="format-detection" content="telephone=no">
 
-    <title>宿洗寵物 Soosi Pet | 數位契約系統</title>
+    <title>宿洗寵物 Soosi Pet | 數位暨契約系統</title>
     
     <link rel="icon" type="image/png" href="nav.png">
     <meta name="theme-color" content="#6A8D73"> 
@@ -429,7 +429,6 @@ if(!realtimeSig) newErrors.signature = '請完成簽名';
                             <div className="grid grid-cols-1 w-full gap-5">
                                 <button onClick={goGrooming} 
                                     className="glass-card p-6 flex items-center gap-5 group hover:bg-white/90 active:scale-[0.98] border-l-8 border-soosi-green transition-all relative overflow-hidden">
-                                    <div className="absolute right-0 top-0 opacity-10 transform translate-x-1/4 -translate-y-1/4"><Icon name="scissors" size={120} className="text-soosi-green"/></div>
                                     <div className="w-16 h-16 rounded-2xl bg-soosi-green/10 flex items-center justify-center text-soosi-green group-hover:bg-soosi-green group-hover:text-white transition-colors shadow-sm z-10">
                                         <Icon name="scissors" size={32} />
                                     </div>
@@ -442,7 +441,6 @@ if(!realtimeSig) newErrors.signature = '請完成簽名';
 
                                 <button onClick={goBoarding} 
                                     className="glass-card p-6 flex items-center gap-5 group hover:bg-white/90 active:scale-[0.98] border-l-8 border-soosi-wood transition-all relative overflow-hidden">
-                                    <div className="absolute right-0 top-0 opacity-10 transform translate-x-1/4 -translate-y-1/4"><Icon name="home" size={120} className="text-soosi-wood"/></div>
                                     <div className="w-16 h-16 rounded-2xl bg-soosi-wood/10 flex items-center justify-center text-soosi-wood group-hover:bg-soosi-wood group-hover:text-white transition-colors shadow-sm z-10">
                                         <Icon name="home" size={32} />
                                     </div>
@@ -974,4 +972,3 @@ if(!realtimeSig) newErrors.signature = '請完成簽名';
     </script>
 </body>
 </html>
-
