--- a/admin.html
+++ b/admin.html
@@ -221,6 +221,9 @@
                                     <div className="w-10 h-10 rounded-full bg-soosi-wood text-white flex items-center justify-center"><Icon name="user" /></div>
                                     員工登入
                                 </button>
+                                <a href="./index.html" className="inline-flex items-center gap-2 mb-6 text-xs font-bold text-soosi-wood hover:text-soosi-green transition-colors">
+    <Icon name="arrow-left" size={14}/> 返回填寫首頁
+</a>
                             </div>
                         ) : (
                             <form onSubmit={handleLogin} className="space-y-4 animate-in fade-in slide-in-from-bottom-2">
@@ -316,7 +319,7 @@
                 return (
                     <div className="bg-gray-50 p-4 rounded-xl border border-gray-100 text-sm space-y-2 mb-4">
                         <div className="font-black text-gray-400 text-xs border-b border-gray-200 pb-2 mb-2 flex items-center gap-1">
-                            <Icon name="file-text" size={14}/> 費用明細 (唯讀參考)
+                            <Icon name="file-text" size={14}/> 費用明細
                         </div>
                         
                         {/* 住宿模式顯示 */}
@@ -799,7 +802,7 @@
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', async () => {
                 try {
-                    const registration = await navigator.serviceWorker.register('./sw-admin.js?v=4');
+                    const registration = await navigator.serviceWorker.register('./sw-admin.js?v=5');
                     console.log('Admin SW 註冊成功');
                 } catch (error) {
                     console.error('Admin SW 註冊失敗:', error);
